tests/testfiles/invalid_prog_fails/21_double_decl.c
int main() {
    int x = 23 = 45;

    return x;
}